--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                     <p class="txt-exp-prof">Site de venda de doces</p>
                     <div class="buttons-exp">
                         <a class="btn-repository" target="_blank"
-                            href="https://github.com/henriferi/doces">Repositório</a>
-                        <a href="" target="_blank" class="btn-show-demo">Ver demo</a>
+                            href="https://github.com/henriferi/divineSweets">Repositório</a>
+                        <a href="https://henriferi.github.io/divineSweets/" target="_blank" class="btn-show-demo">Ver demo</a>
                     </div>  
                 </div>
             </div>
